--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ after_success:
 
 jobs:
   include:
+    - stage: Mypy type check
+      python: '3.8'
+      script: mypy
+
     - stage: Local integration test
       python: '3.8'
       script: pytest -m local
